src/sass/styles.scss
/* ... */
.form-dark .md-form {
    label,
    input {
        color: white;
    }
}

#filter-wrapper {
    background-color: #f2f0f0;

    .filter-button {
        padding: .5rem 1rem;
        height: 30px;
        line-height: 1.4;

        .badge {
            padding: 3px 5px;
            line-height: 1.2;
        }
    }

    #show-future+label {
        padding-left: 25px; 
     }
    
}

table.table.timecard-list {
    width: calc(100% - 3px);
    img {
        max-height: 40px;
    }
    th {
        border: none;
        color: $harris-grey;
        padding: 0 10px;
        vertical-align: bottom;

        .col-sort-direction {
            display: none
        }

        &.sorted {
            .col-sort-direction {
                display: inline;
            }
        }

        &.not-sortable {
            cursor: default;
        }
    }

    tr {
        cursor: pointer;
    }

    td {
        border: 1px solid lightgrey;
        padding: 10px;
        vertical-align: middle;

        &.status {
            border-right: 6px solid lightgrey;
            &.approved {
                border-right: 6px solid #6db444;
            }
            &.open {
                border-right: 6px solid #F99F3C;
            }
        }
    }
}

#utility-bar {
    background: $harris-red;
    color: white;

    #emplid-search-wrapper {
        flex: 1 1 auto;
        position: relative;
        width: 1%;
    }

    .available-employees {
        max-height: 250px;
        overflow-y: auto;
    }

    .utility-bar-text {
        font-size: 1rem;
        line-height: 1.8;
        margin-bottom: 0;

        @media screen and (min-width: $breakpoint-lg) {
            font-size: 1.25rem;
        }

        @media screen and (max-width: $breakpoint-md) {
            line-height: 1.2;
        }
    }

    #approvals-tabs {
        bottom: -.5rem;
        position: absolute;
    }

    .tabs-wrapper .classic-tabs {
        .nav-item:last-child {
            .nav-link {
                margin-right: 0;
            }
        }
        .nav-link {
            margin: 0 1rem 0 0;
        } 
    }

    .notes-link {
        .badge {
            color: $harris-red !important;
            float: right;
            margin-top: 2px;
            padding-left: .4em;
        }
    }

    .approver-search {
        #manager-mode-wrapper {
            .md-form {
                margin-top: .5rem;
                text-align: center;

                .lever {
                    margin-bottom: .5rem;
                }
            }
        }

        @media screen and (max-width: $breakpoint-xs) {
            #manager-mode-wrapper {
                .md-form {
                    margin-top: 0;
                }
            }

            #search-btn-wrapper {
                button {
                    margin-top: 0 !important;
                }
            }
        }

        @media screen and (min-width: 1440px) {
            #manager-mode-wrapper {
                .md-form {
                    margin-top: 1.5rem;
                }
            }
        }
    }
}

#refresh-list {
    position: absolute;
    right: 1rem;
}

.status-filter-list, .name-filter-list {
    max-height: 300px;
    overflow-y: auto;
}

#mini-dashboard {
    background: #f2f0f0;

    .card {
        height: 160px;
        min-width: 100px;

        .min-chart {
            height: 75px;
            width: 100%;

            canvas {
                margin: auto;
                right: 0;

                @media screen and (max-width: $breakpoint-md) {
                    display: none;       
                }
            }
        }

        .fy {
            display: block;
            position: absolute;
            width: calc(100% - 20px);
        }
        

        .hours {
            display: inline-block;
            line-height: 75px;
            min-width: 75px;
        }

        .holiday-calendar {
            background: url('images/holiday-cal.png') no-repeat center center;
            background-size: cover;
 
            a {
                display: block;
                height: 100%;
                left: 0;
                position: absolute;
                top: 0;
                width: 100%;
            }

            h2 {
                white-space: nowrap;
            }
        }

        .card-body .col {
            padding: 0 10px;
        }
    }
}
/* ... */

